# pgdumpcloud

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json  vite.config.ts
pgdumpcloud-core/: Cargo.toml  README.md
pgdumpcloud-core/src/: compress.rs  config.rs  connection.rs  dump.rs  error.rs  introspect.rs  lib.rs  parquet_export.rs  progress.rs  restore.rs
pgdumpcloud-core/src/storage/: mod.rs  s3.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jobs.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: backup.rs  connections.rs  introspect.rs  jobs.rs  mod.rs  restore.rs  storage.rs
src/components/backup/: BackupOptions.tsx  BackupPanel.tsx  BackupProgress.tsx  TablePicker.tsx
src/components/connections/: ConnectionForm.tsx
src/components/history/: BackupHistory.tsx
src/components/jobs/: JobDetail.tsx  JobsList.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/restore/: BackupBrowser.tsx  RestorePanel.tsx  RestoreProgress.tsx
src/components/settings/: SettingsPanel.tsx
src/components/storage/: StorageForm.tsx
src/hooks/: use-backup.ts  use-connections.ts  use-job-detail.ts  use-jobs.ts  use-restore.ts  use-storage.ts  use-theme.ts
src/lib/: tauri.ts  types.ts
