[package]
name = "pgdumpcloud-core"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL backup/restore to S3-compatible cloud storage"
license = "MIT"

[lib]
name = "pgdumpcloud_core"

[[bin]]
name = "pgdumpcloud"
path = "src/bin/pgdumpcloud.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
postgres-native-tls = "0.5"
native-tls = "0.2"

aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-types = "1"

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

arrow = { version = "53", default-features = false, features = ["prettyprint"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }
tar = "0.4"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-util = "0.7"
futures-util = "0.3"
url = "2"
urlencoding = "2"
